v1.2 Fix bug Improve code Fix player can't sell more than 1st