@@ -15,6 +15,7 @@ import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static net.danh.dcore.Utils.Items.Lore;
 import static net.danh.dcore.Utils.Items.makeItem;
@@ -28,7 +29,13 @@ public class Shops {
         Inventory inv = Bukkit.createInventory(p, size, name);
         for (String item_name : Objects.requireNonNull(get.getConfigurationSection("ITEMS")).getKeys(false)) {
             if (get.contains("ITEMS." + item_name + ".MATERIAL")) {
-                ItemStack item = makeItem(Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(get.getString("ITEMS." + item_name + ".MATERIAL")))), Short.parseShort("0"), 1, get.getBoolean("ITEMS." + item_name + ".GLOW"), get.getBoolean("ITEMS." + item_name + ".HIDE_FLAG"), false, Objects.requireNonNull(get.getString("ITEMS." + item_name + ".NAME")), get.getStringList("ITEMS." + item_name + ".LORE"));
+                ItemStack item;
+                if (!get.contains("ITEMS." + item_name + ".DATA")) {
+                    item = makeItem(Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(get.getString("ITEMS." + item_name + ".MATERIAL")))), Short.parseShort("0"), 1, get.getBoolean("ITEMS." + item_name + ".GLOW"), get.getBoolean("ITEMS." + item_name + ".HIDE_FLAG"), false, Objects.requireNonNull(get.getString("ITEMS." + item_name + ".NAME")), get.getStringList("ITEMS." + item_name + ".LORE"));
+                } else {
+                    short data = Short.parseShort(get.getString("ITEMS." + item_name + ".DATA"));
+                    item = makeItem(Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(get.getString("ITEMS." + item_name + ".MATERIAL")))), data, 1, get.getBoolean("ITEMS." + item_name + ".GLOW"), get.getBoolean("ITEMS." + item_name + ".HIDE_FLAG"), false, Objects.requireNonNull(get.getString("ITEMS." + item_name + ".NAME")), get.getStringList("ITEMS." + item_name + ".LORE"));
+                }
                 if (get.contains("ITEMS." + item_name + ".SLOT")) {
                     int slot = get.getInt("ITEMS." + item_name + ".SLOT");
                     inv.setItem(slot, item);
@@ -44,7 +51,7 @@ public class Shops {
                 try {
                     ItemMeta meta = mythicc_item.getItemMeta();
                     List<String> lore = meta.getLore();
-                    List<String> lore_item = Files.getconfigfile().getStringList("LORE").stream().map(s -> s.replaceAll("%sell%", String.format("%,d", get.getInt("ITEMS." + item_name + ".SELL_PRICE"))).replaceAll("%buy%", String.format("%,d", get.getInt("ITEMS." + item_name + ".BUY_PRICE")))).toList();
+                    List<String> lore_item = Files.getconfigfile().getStringList("LORE").stream().map(s -> s.replaceAll("%sell%", String.format("%,d", get.getInt("ITEMS." + item_name + ".SELL_PRICE"))).replaceAll("%buy%", String.format("%,d", get.getInt("ITEMS." + item_name + ".BUY_PRICE")))).collect(Collectors.toList());
                     if (lore != null) {
                         lore.addAll(lore_item);
                         meta.setLore(Lore(lore));
